# exocortex

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml
docs/: IMPROVEMENT-PLAN.md  auto-recall.md  conversations.md  improvement-plan.html  memory-chat-plan.md  roadmap.md
docs/superpowers/plans/: 2026-07-04-reflect-thinking-partner.md
docs/superpowers/specs/: 2026-07-04-injection-hardening-design.md  2026-07-04-reflect-thinking-partner-design.md
src/exocortex/: config.py
tests/contract/: test_bridge_conformance.py
tests/e2e/: test_synthetic_handoff.py
tests/integration/: test_codex_real.py  test_hermes_real.py
tests/unit/: test_approvals.py  test_audit_log.py  test_bridge_protocol.py  test_budget.py  test_builtin_tools.py  test_cli_extended.py  test_cli_reflect.py  test_codex_bridge.py  test_config.py  test_contracts_roundtrip.py  test_conversation_orchestration.py  test_coordinator_resilience.py  test_dedup_and_forget.py  test_dispatch.py  test_durable_memory.py  test_embedding.py  test_event_bus.py  test_fsm.py  test_handoff_bundle.py  test_hermes_bridge.py  test_humanize.py  test_insight_contract.py  test_insight_propose.py  test_managers.py  test_mcp_handlers.py  test_mcp_server_smoke.py  test_mcp_toolgate.py  test_memory_chat.py  test_merge_gate.py  test_phase1_exit.py  test_phase2_exit.py  test_phase3_exit.py  test_phase4_exit.py  test_phase5_exit.py  test_policies.py  test_projection.py  test_promotion.py  test_recall.py  test_reflect_actions.py  test_reflect_goal.py  (+13 more)
(+99 files in other folders)
