[project]
name = "exocortex"
version = "0.0.1"
description = "Multi-agent coordination platform"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "anyio>=4.3",
    "typer>=0.12",
    "rich>=13.7",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "numpy>=1.26",
    "mcp>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.9",
    "ruff>=0.3",
]

[project.scripts]
precog = "exocortex.operator.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/exocortex"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL"]
ignore = ["PLR2004", "PLR0913"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
